--- a/oe2024/political-journalism/RSS_scripts/NYT_scraper_testing.ipynb
+++ b/oe2024/political-journalism/RSS_scripts/NYT_scraper_testing.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +28,72 @@
     "data = response.json()\n",
     "num_articles = data['response']['meta']['hits']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'<!doctype html>\\n<html lang=en>\\n<title>404 Not Found</title>\\n<h1>Not Found</h1>\\n<p>The requested URL was not found on the server. If you entered the URL manually please check your spelling and try again.</p>\\n'\n"
+     ]
+    },
+    {
+     "ename": "JSONDecodeError",
+     "evalue": "Expecting value: line 1 column 1 (char 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mJSONDecodeError\u001b[0m                           Traceback (most recent call last)",
+      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/requests/models.py:971\u001b[0m, in \u001b[0;36mResponse.json\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m    970\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 971\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mcomplexjson\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloads\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtext\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    972\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m JSONDecodeError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m    973\u001b[0m     \u001b[38;5;66;03m# Catch JSON-related errors and raise as requests.JSONDecodeError\u001b[39;00m\n\u001b[1;32m    974\u001b[0m     \u001b[38;5;66;03m# This aliases json.JSONDecodeError and simplejson.JSONDecodeError\u001b[39;00m\n",
+      "File \u001b[0;32m/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/json/__init__.py:346\u001b[0m, in \u001b[0;36mloads\u001b[0;34m(s, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[1;32m    343\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[1;32m    344\u001b[0m         parse_int \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m parse_float \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[1;32m    345\u001b[0m         parse_constant \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_pairs_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m kw):\n\u001b[0;32m--> 346\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_default_decoder\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdecode\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    347\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "File \u001b[0;32m/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/json/decoder.py:337\u001b[0m, in \u001b[0;36mJSONDecoder.decode\u001b[0;34m(self, s, _w)\u001b[0m\n\u001b[1;32m    333\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Return the Python representation of ``s`` (a ``str`` instance\u001b[39;00m\n\u001b[1;32m    334\u001b[0m \u001b[38;5;124;03mcontaining a JSON document).\u001b[39;00m\n\u001b[1;32m    335\u001b[0m \n\u001b[1;32m    336\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m--> 337\u001b[0m obj, end \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mraw_decode\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43midx\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m_w\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mend\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    338\u001b[0m end \u001b[38;5;241m=\u001b[39m _w(s, end)\u001b[38;5;241m.\u001b[39mend()\n",
+      "File \u001b[0;32m/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/json/decoder.py:355\u001b[0m, in \u001b[0;36mJSONDecoder.raw_decode\u001b[0;34m(self, s, idx)\u001b[0m\n\u001b[1;32m    354\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[0;32m--> 355\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m JSONDecodeError(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExpecting value\u001b[39m\u001b[38;5;124m\"\u001b[39m, s, err\u001b[38;5;241m.\u001b[39mvalue) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    356\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m obj, end\n",
+      "\u001b[0;31mJSONDecodeError\u001b[0m: Expecting value: line 1 column 1 (char 0)",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mJSONDecodeError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[87], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m response \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mget(url)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(response\u001b[38;5;241m.\u001b[39mcontent)\n\u001b[0;32m----> 6\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[43mresponse\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mjson\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(data)\n",
+      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/requests/models.py:975\u001b[0m, in \u001b[0;36mResponse.json\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m    971\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m complexjson\u001b[38;5;241m.\u001b[39mloads(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtext, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m    972\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m JSONDecodeError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m    973\u001b[0m     \u001b[38;5;66;03m# Catch JSON-related errors and raise as requests.JSONDecodeError\u001b[39;00m\n\u001b[1;32m    974\u001b[0m     \u001b[38;5;66;03m# This aliases json.JSONDecodeError and simplejson.JSONDecodeError\u001b[39;00m\n\u001b[0;32m--> 975\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m RequestsJSONDecodeError(e\u001b[38;5;241m.\u001b[39mmsg, e\u001b[38;5;241m.\u001b[39mdoc, e\u001b[38;5;241m.\u001b[39mpos)\n",
+      "\u001b[0;31mJSONDecodeError\u001b[0m: Expecting value: line 1 column 1 (char 0)"
+     ]
+    }
+   ],
+   "source": [
+    "load_dotenv(dotenv_path=\"api_keys.env\")\n",
+    "api_key = os.getenv(\"API_KEY_NewYorkTimes\")\n",
+    "url = f\"http://api.nytimes.com/svc/semantic/v2/concept/search.json(?optional_parameters)&api-key={api_key}\"\n",
+    "response = requests.get(url)\n",
+    "print(response.content)\n",
+    "data = response.json()\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tags/Keywords: [{'name': 'subject', 'value': 'Politics and Government', 'rank': 1, 'major': 'N'}, {'name': 'subject', 'value': 'Elections', 'rank': 2, 'major': 'N'}, {'name': 'subject', 'value': 'Movies', 'rank': 3, 'major': 'N'}, {'name': 'subject', 'value': 'United States Politics and Government', 'rank': 4, 'major': 'N'}, {'name': 'creative_works', 'value': 'Dr Strangelove: Or How I Learned to Stop Worrying and Love the Bomb (Movie)', 'rank': 5, 'major': 'N'}]\n",
+      "Tags/Keywords: [{'name': 'persons', 'value': 'Musk, Elon', 'rank': 1, 'major': 'N'}, {'name': 'subject', 'value': 'United States Politics and Government', 'rank': 2, 'major': 'N'}, {'name': 'subject', 'value': 'Federal Budget (US)', 'rank': 3, 'major': 'N'}, {'name': 'organizations', 'value': 'House of Representatives', 'rank': 4, 'major': 'N'}, {'name': 'organizations', 'value': 'Republican Party', 'rank': 5, 'major': 'N'}, {'name': 'persons', 'value': 'Johnson, Mike (1972- )', 'rank': 6, 'major': 'N'}, {'name': 'persons', 'value': 'Trump, Donald J', 'rank': 7, 'major': 'N'}, {'name': 'subject', 'value': 'Rumors and Misinformation', 'rank': 8, 'major': 'N'}, {'name': 'subject', 'value': 'High Net Worth Individuals', 'rank': 9, 'major': 'N'}]\n",
+      "Tags/Keywords: [{'name': 'subject', 'value': 'United States Politics and Government', 'rank': 1, 'major': 'N'}, {'name': 'subject', 'value': 'Law and Legislation', 'rank': 2, 'major': 'N'}, {'name': 'subject', 'value': 'Federal Budget (US)', 'rank': 3, 'major': 'N'}, {'name': 'persons', 'value': 'Biden, Joseph R Jr', 'rank': 4, 'major': 'N'}]\n",
+      "Tags/Keywords: [{'name': 'glocations', 'value': 'Canada', 'rank': 1, 'major': 'N'}, {'name': 'subject', 'value': 'United States International Relations', 'rank': 2, 'major': 'N'}, {'name': 'persons', 'value': 'Trump, Donald J', 'rank': 3, 'major': 'N'}, {'name': 'persons', 'value': 'Trudeau, Justin', 'rank': 4, 'major': 'N'}, {'name': 'persons', 'value': 'Freeland, Chrystia', 'rank': 5, 'major': 'N'}, {'name': 'subject', 'value': 'Politics and Government', 'rank': 6, 'major': 'N'}, {'name': 'organizations', 'value': 'Conservative Party (Canada)', 'rank': 7, 'major': 'N'}, {'name': 'organizations', 'value': 'Liberal Party (Canada)', 'rank': 8, 'major': 'N'}, {'name': 'subject', 'value': 'International Trade and World Market', 'rank': 9, 'major': 'N'}, {'name': 'subject', 'value': 'Customs (Tariff)', 'rank': 10, 'major': 'N'}, {'name': 'subject', 'value': 'Protectionism (Trade)', 'rank': 11, 'major': 'N'}, {'name': 'subject', 'value': 'Polls and Public Opinion', 'rank': 12, 'major': 'N'}]\n",
+      "Tags/Keywords: [{'name': 'subject', 'value': 'Virtual Currency', 'rank': 1, 'major': 'N'}, {'name': 'subject', 'value': 'Banking and Financial Institutions', 'rank': 2, 'major': 'N'}, {'name': 'subject', 'value': 'Entrepreneurship', 'rank': 3, 'major': 'N'}, {'name': 'subject', 'value': 'Start-ups', 'rank': 4, 'major': 'N'}, {'name': 'subject', 'value': 'Venture Capital', 'rank': 5, 'major': 'N'}, {'name': 'subject', 'value': 'Computers and the Internet', 'rank': 6, 'major': 'N'}, {'name': 'subject', 'value': 'Regulation and Deregulation of Industry', 'rank': 7, 'major': 'N'}, {'name': 'subject', 'value': 'Bitcoin (Currency)', 'rank': 8, 'major': 'N'}, {'name': 'subject', 'value': 'United States Politics and Government', 'rank': 9, 'major': 'N'}, {'name': 'organizations', 'value': 'Silicon Valley Bank', 'rank': 10, 'major': 'N'}, {'name': 'persons', 'value': 'Andreessen, Marc L', 'rank': 11, 'major': 'N'}]\n",
+      "Tags/Keywords: [{'name': 'persons', 'value': 'Harris, Kamala D', 'rank': 1, 'major': 'N'}, {'name': 'subject', 'value': 'Presidential Election of 2024', 'rank': 2, 'major': 'N'}, {'name': 'organizations', 'value': 'Democratic Party', 'rank': 3, 'major': 'N'}, {'name': 'subject', 'value': 'United States Politics and Government', 'rank': 4, 'major': 'N'}]\n",
+      "Tags/Keywords: [{'name': 'subject', 'value': 'United States Politics and Government', 'rank': 1, 'major': 'N'}, {'name': 'subject', 'value': 'Presidential Election of 2024', 'rank': 2, 'major': 'N'}, {'name': 'subject', 'value': 'Presidential Transition (US)', 'rank': 3, 'major': 'N'}, {'name': 'persons', 'value': 'Trump, Donald J', 'rank': 4, 'major': 'N'}]\n",
+      "Tags/Keywords: [{'name': 'subject', 'value': 'Books and Literature', 'rank': 1, 'major': 'N'}, {'name': 'subject', 'value': 'Politics and Government', 'rank': 2, 'major': 'N'}, {'name': 'subject', 'value': 'United States Politics and Government', 'rank': 3, 'major': 'N'}, {'name': 'persons', 'value': 'Trump, Donald J', 'rank': 4, 'major': 'N'}, {'name': 'subject', 'value': 'Presidential Election of 2024', 'rank': 5, 'major': 'N'}, {'name': 'glocations', 'value': 'United States', 'rank': 6, 'major': 'N'}, {'name': 'creative_works', 'value': 'American Politics: The Promise of Disharmony (Book)', 'rank': 7, 'major': 'N'}, {'name': 'persons', 'value': 'Huntington, Samuel P', 'rank': 8, 'major': 'N'}, {'name': 'persons', 'value': 'Slepian, Dan', 'rank': 9, 'major': 'N'}, {'name': 'creative_works', 'value': 'The Sing Sing Files: One Journalist, Six Innocent Men and a 20 Year Fight for Justice (Book)', 'rank': 10, 'major': 'N'}, {'name': 'subject', 'value': 'audio-neutral-informative', 'rank': 11, 'major': 'N'}]\n",
+      "Tags/Keywords: [{'name': 'organizations', 'value': 'Democratic Party', 'rank': 1, 'major': 'N'}, {'name': 'subject', 'value': 'Religion and Belief', 'rank': 2, 'major': 'N'}, {'name': 'subject', 'value': 'Presidential Election of 2024', 'rank': 3, 'major': 'N'}, {'name': 'persons', 'value': 'Warnock, Raphael G', 'rank': 4, 'major': 'N'}, {'name': 'persons', 'value': 'Shapiro, Josh (1973- )', 'rank': 5, 'major': 'N'}, {'name': 'persons', 'value': 'Buttigieg, Pete (1982- )', 'rank': 6, 'major': 'N'}, {'name': 'persons', 'value': 'Beshear, Andrew G (1977- )', 'rank': 7, 'major': 'N'}, {'name': 'subject', 'value': 'United States Politics and Government', 'rank': 8, 'major': 'N'}]\n",
+      "Tags/Keywords: [{'name': 'subject', 'value': 'United States Politics and Government', 'rank': 1, 'major': 'N'}, {'name': 'subject', 'value': 'Conservatism (US Politics)', 'rank': 2, 'major': 'N'}, {'name': 'subject', 'value': 'Illegal Immigration', 'rank': 3, 'major': 'N'}, {'name': 'organizations', 'value': 'Turning Point USA', 'rank': 4, 'major': 'N'}, {'name': 'organizations', 'value': 'Republican Party', 'rank': 5, 'major': 'N'}, {'name': 'persons', 'value': 'Trump, Donald J', 'rank': 6, 'major': 'N'}, {'name': 'persons', 'value': 'Musk, Elon', 'rank': 7, 'major': 'N'}, {'name': 'glocations', 'value': 'Phoenix (Ariz)', 'rank': 8, 'major': 'N'}, {'name': 'subject', 'value': 'Diversity Initiatives', 'rank': 9, 'major': 'N'}]\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
