changes to tag analysis notebook

--- a/oe2024/political-journalism/RSS_scripts/Wayback_rss_scraping.ipynb
+++ b/oe2024/political-journalism/RSS_scripts/Wayback_rss_scraping.ipynb
@@ -47,17 +47,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error: HTTPSConnectionPool(host='web.archive.org', port=443): Max retries exceeded with url: /web/20220729050900/https://moxie.foxnews.com/google-publisher/politics.xml (Caused by ConnectTimeoutError(<urllib3.connection.HTTPSConnection object at 0x105d2a430>, 'Connection to web.archive.org timed out. (connect timeout=10)'))\n",
-      "Error: HTTPSConnectionPool(host='web.archive.org', port=443): Max retries exceeded with url: /web/20221114230854/https://moxie.foxnews.com/google-publisher/politics.xml (Caused by ConnectTimeoutError(<urllib3.connection.HTTPSConnection object at 0x105d2a940>, 'Connection to web.archive.org timed out. (connect timeout=10)'))\n"
-     ]
-    },
     {
      "ename": "ExpatError",
      "evalue": "mismatched tag: line 16, column 2",
@@ -65,7 +57,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mExpatError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 14\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m \n\u001b[1;32m     13\u001b[0m rss_feed \u001b[38;5;241m=\u001b[39m response\u001b[38;5;241m.\u001b[39mtext\n\u001b[0;32m---> 14\u001b[0m rss_dict \u001b[38;5;241m=\u001b[39m \u001b[43mxmltodict\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparse\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrss_feed\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     15\u001b[0m years\u001b[38;5;241m.\u001b[39mappend(rss_dict[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrss\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchannel\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpubDate\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m     16\u001b[0m total_articles \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(rss_dict[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrss\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchannel\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mitem\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "Cell \u001b[0;32mIn[5], line 14\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m \n\u001b[1;32m     13\u001b[0m rss_feed \u001b[38;5;241m=\u001b[39m response\u001b[38;5;241m.\u001b[39mtext\n\u001b[0;32m---> 14\u001b[0m rss_dict \u001b[38;5;241m=\u001b[39m \u001b[43mxmltodict\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparse\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrss_feed\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     15\u001b[0m years\u001b[38;5;241m.\u001b[39mappend(rss_dict[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrss\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchannel\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpubDate\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m     16\u001b[0m total_articles \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(rss_dict[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrss\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchannel\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mitem\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
       "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/xmltodict.py:359\u001b[0m, in \u001b[0;36mparse\u001b[0;34m(xml_input, encoding, expat, process_namespaces, namespace_separator, disable_entities, process_comments, **kwargs)\u001b[0m\n\u001b[1;32m    357\u001b[0m     parser\u001b[38;5;241m.\u001b[39mParse(\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m    358\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 359\u001b[0m     \u001b[43mparser\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mParse\u001b[49m\u001b[43m(\u001b[49m\u001b[43mxml_input\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m    360\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m handler\u001b[38;5;241m.\u001b[39mitem\n",
       "\u001b[0;31mExpatError\u001b[0m: mismatched tag: line 16, column 2"
      ]
@@ -81,14 +73,14 @@
     "        time.sleep(delay)\n",
     "        response = requests.get(url, timeout=10)\n",
     "        \n",
+    "        rss_feed = response.text\n",
+    "        rss_dict = xmltodict.parse(rss_feed)\n",
+    "        years.append(rss_dict['rss']['channel']['pubDate'])\n",
+    "        total_articles += len(rss_dict['rss']['channel']['item'])\n",
+    "        responses.append(rss_dict)\n",
     "    except Exception as e:\n",
     "        print(f\"Error: {e}\" )\n",
-    "        continue \n",
-    "    rss_feed = response.text\n",
-    "    rss_dict = xmltodict.parse(rss_feed)\n",
-    "    years.append(rss_dict['rss']['channel']['pubDate'])\n",
-    "    total_articles += len(rss_dict['rss']['channel']['item'])\n",
-    "    responses.append(rss_dict)"
+    "        continue "
    ]
   },
   {
