--- a/oe2024/political-journalism/RSS_scripts/NYT_scraper_testing.ipynb
+++ b/oe2024/political-journalism/RSS_scripts/NYT_scraper_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,9 @@
     "from dotenv import load_dotenv\n",
     "import os\n",
     "import time\n",
-    "import json\n"
+    "import json\n",
+    "from collections import Counter\n",
+    "\n"
    ]
   },
   {
@@ -179,29 +181,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "An error occurred for 2020-9: 429 Client Error: Too Many Requests for url: https://api.nytimes.com/svc/archive/v1/2020/9.json?api-key=P5T5Og2xMQan89LizfjxslF6t2oGJYSL\n",
-      "An error occurred for 2020-10: 429 Client Error: Too Many Requests for url: https://api.nytimes.com/svc/archive/v1/2020/10.json?api-key=P5T5Og2xMQan89LizfjxslF6t2oGJYSL\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[30], line 12\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m year \u001b[38;5;129;01min\u001b[39;00m years_to_scrape:\n\u001b[1;32m     11\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m month \u001b[38;5;129;01min\u001b[39;00m months_to_scrape:\n\u001b[0;32m---> 12\u001b[0m         \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdelay\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     13\u001b[0m         url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://api.nytimes.com/svc/archive/v1/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00myear\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmonth\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.json?api-key=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mapi_key\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     15\u001b[0m         \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m     16\u001b[0m             \u001b[38;5;66;03m# Make the API request\u001b[39;00m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define the years and months to scrape\n",
     "years_to_scrape = [2020, 2021, 2022]\n",
@@ -257,6 +239,45 @@
     "            \n",
     "            "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1957\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Using the NYT semantic API to scrape top level article topics\n",
+    "with open(\"nytimes_articles.json\", \"r\") as f:\n",
+    "    articles = json.load(f)\n",
+    "\n",
+    "keyword_counts = Counter()\n",
+    "for article in articles:\n",
+    "    keywords = article.get(\"keywords\", [])\n",
+    "    keyword_counts.update(keywords)\n",
+    "\n",
+    "common_keyword_threshold = 50\n",
+    "common_keywords = {}\n",
+    "\n",
+    "for keyword in keyword_counts:\n",
+    "    if keyword_counts[keyword] > common_keyword_threshold:\n",
+    "        common_keywords[keyword] = keyword_counts[keyword]\n",
+    "print(len(common_keywords))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
